🚧  update project configuration

--- a/package.json
+++ b/package.json
@@ -4,9 +4,6 @@
   "private": true,
   "license": "ISC",
   "dependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1"
   },
   "author": {
     "name": "Matthieu Lassalvy",
@@ -34,6 +31,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
+    "react-scripts": "1.1.1",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-form": "^7.3.0"
