--- a/package.json
+++ b/package.json
@@ -4,29 +4,11 @@
   "private": true,
   "license": "ISC",
   "dependencies": {
-  },
-  "author": {
-    "name": "Matthieu Lassalvy",
-    "email": "sixertoy.github@gmail.com"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  },
-  "devDependencies": {
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.9.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0"
-  },
-  "dependencies": {
-    "node-sass": "^4.7.2",
+    "history": "^4.7.2",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-helmet": "^5.2.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
@@ -35,5 +17,32 @@
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-form": "^7.3.0"
+  },
+  "author": {
+    "name": "Matthieu Lassalvy",
+    "email": "sixertoy.github@gmail.com"
+  },
+  "scripts": {
+    "dev": "nf start -p 3000",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "postbuild": "cp ./src/styles.css ./build/",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "sass": "node_modules/.bin/node-sass -w -r src/scss/styles.scss src/styles.css --output-style compressed"
+  },
+  "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
+    "foreman": "^2.0.0",
+    "husky": "^0.14.3",
+    "node-sass": "^4.7.2",
+    "prettier": "^1.11.1",
+    "prettier-eslint": "^8.8.1",
+    "prettier-stylelint": "^0.4.2",
+    "stylelint-config-standard": "^18.2.0"
   }
 }
