--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "license": "ISC",
   "dependencies": {
+    "fast-deep-equal": "^1.1.0",
     "history": "^4.7.2",
     "leaflet": "^1.3.1",
     "prop-types": "^15.6.1",
@@ -18,7 +19,8 @@
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
-    "redux-form": "^7.3.0"
+    "redux-form": "^7.3.0",
+    "redux-thunk": "^2.2.0"
   },
   "author": {
     "name": "Matthieu Lassalvy",
