--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "fast-deep-equal": "^1.1.0",
     "history": "^4.7.2",
+    "immer": "^1.2.0",
     "leaflet": "^1.3.1",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
