--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "dependencies": {
     "fast-deep-equal": "^1.1.0",
     "history": "^4.7.2",
-    "immer": "^1.2.0",
     "leaflet": "^1.3.1",
+    "lodash.filter": "^4.6.0",
+    "lodash.map": "^4.6.0",
+    "lodash.maxby": "^4.6.0",
+    "lodash.without": "^4.4.0",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
