--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-geolocated": "^2.3.0",
     "react-helmet": "^5.2.0",
     "react-leaflet": "^1.9.1",
     "react-redux": "^5.0.7",
