--- a/package.json
+++ b/package.json
@@ -1,48 +1,19 @@
 {
-  "name": "assec-static",
+  "name": "assec",
   "version": "0.7.0",
   "private": true,
   "license": "ISC",
-  "dependencies": {
-    "fast-deep-equal": "^1.1.0",
-    "history": "^4.7.2",
-    "leaflet": "^1.3.1",
-    "lodash.filter": "^4.6.0",
-    "lodash.map": "^4.6.0",
-    "lodash.maxby": "^4.6.0",
-    "lodash.without": "^4.4.0",
-    "prop-types": "^15.6.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-geolocated": "^2.3.0",
-    "react-helmet": "^5.2.0",
-    "react-leaflet": "^1.9.1",
-    "react-redux": "^5.0.7",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
-    "react-router-redux": "^5.0.0-alpha.9",
-    "react-scripts": "1.1.1",
-    "redux": "^3.7.2",
-    "redux-devtools-extension": "^2.13.2",
-    "redux-form": "^7.3.0",
-    "redux-thunk": "^2.2.0",
-    "uuid": "^3.2.1"
-  },
   "author": {
     "name": "Matthieu Lassalvy",
     "email": "sixertoy.github@gmail.com"
   },
   "scripts": {
     "dev": "nf start -p 3000",
-    "tap": "node ./.scripts/schema.js",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "postbuild": "cp ./src/styles.css ./build/",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "sass": "node_modules/.bin/node-sass -w -r src/scss/styles.scss src/styles.css --output-style compressed",
     "precommit": "sh ./.scripts/hooks/pre-commit"
   },
+  "workspaces": [
+    "frontend"
+  ],
   "devDependencies": {
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
@@ -51,7 +22,6 @@
     "eslint-plugin-react": "^7.7.0",
     "foreman": "^2.0.0",
     "husky": "^0.14.3",
-    "node-sass": "^4.7.2",
     "prettier": "^1.11.1",
     "prettier-eslint": "^8.8.1",
     "prettier-stylelint": "^0.4.2",
