--- a/package.json
+++ b/package.json
@@ -10,23 +10,16 @@
   },
   "scripts": {
     "dev": "nf start -p 3000",
-    "precommit": "sh ./.scripts/hooks/pre-commit"
+    "precommit": "sh ./.scripts/hooks/pre-commit",
+    "cleanup": "rm -rf node_modules && yarn install"
   },
   "workspaces": [
+    "utils",
     "frontend",
     "backoffice"
   ],
   "devDependencies": {
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.9.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0",
     "foreman": "^2.0.0",
-    "husky": "^0.14.3",
-    "prettier": "^1.11.1",
-    "prettier-eslint": "^8.8.1",
-    "prettier-stylelint": "^0.4.2",
-    "stylelint-config-standard": "^18.2.0"
+    "husky": "^0.14.3"
   }
 }
