--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   ],
   "devDependencies": {
     "foreman": "^2.0.0",
-    "husky": "^0.14.3"
+    "fs-extra": "^5.0.0",
+    "husky": "^0.14.3",
+    "semver": "^5.5.0"
   }
 }
