--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "assec",
-  "version": "0.7.0",
+  "version": "0.7.2",
   "license": "ISC",
   "description": "ASSEC Frontend",
   "private": true,
@@ -11,6 +11,7 @@
   "scripts": {
     "dev": "nf start -p 3000",
     "precommit": "sh ./.scripts/hooks/pre-commit",
+    "bump": "sh ./.scripts/git-ensure-clean && node ./.scripts/yarn-bump",
     "cleanup": "sh ./.scripts/yarn-cleanup",
     "postcleanup": "yarn install"
   },
