--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "assec",
-  "version": "0.7.2",
+  "version": "0.7.0",
   "license": "ISC",
   "description": "ASSEC Frontend",
   "private": true,
@@ -11,7 +11,8 @@
   "scripts": {
     "dev": "nf start -p 3000",
     "precommit": "sh ./.scripts/hooks/pre-commit",
-    "bump": "sh ./.scripts/git-ensure-clean && node ./.scripts/yarn-bump",
+    "prebump": "sh ./.scripts/git-ensure-clean",
+    "bump": "node ./.scripts/yarn-bump",
     "cleanup": "sh ./.scripts/yarn-cleanup",
     "postcleanup": "yarn install"
   },
@@ -21,9 +22,16 @@
     "backoffice"
   ],
   "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
     "foreman": "^2.0.0",
     "fs-extra": "^5.0.0",
     "husky": "^0.14.3",
+    "prettier": "^1.11.1",
+    "prettier-eslint": "^8.8.1",
     "semver": "^5.5.0"
   }
 }
