🚧  [ADMIN] add routes navigation

--- a/backoffice/package.json
+++ b/backoffice/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backoffice",
+  "name": "assec-backoffice",
   "version": "0.7.1",
   "private": true,
   "dependencies": {
@@ -12,6 +12,7 @@
     "react-helmet": "^5.2.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
