--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "scripts": {
     "dev": "nf start -p 3000",
+    "dev:db": "mongod --dbpath /mongodb/db --port 27018",
     "precommit": "sh ./.scripts/hooks/pre-commit",
     "prebump": "sh ./.scripts/git-ensure-clean",
     "bump": "node ./.scripts/yarn-bump",
@@ -17,6 +18,7 @@
     "postcleanup": "yarn install"
   },
   "workspaces": [
+    "api",
     "utils",
     "frontend",
     "backoffice"
