--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "assec-utils": "",
+    "dotenv-safe": "^5.0.1",
     "fast-deep-equal": "^1.1.0",
     "history": "^4.7.2",
     "leaflet": "^1.3.1",
