--- a/admin/package.json
+++ b/admin/package.json
@@ -3,12 +3,16 @@
   "version": "0.7.1",
   "private": true,
   "dependencies": {
+    "apollo-boost": "^0.1.4",
     "dotenv-safe": "^5.0.1",
     "express": "^4.16.3",
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.8.0",
     "history": "^4.7.2",
     "morgan": "^1.9.0",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
+    "react-apollo": "^2.1.2",
     "react-color": "^2.14.0",
     "react-dom": "^16.2.0",
     "react-helmet": "^5.2.0",
