--- a/admin/package.json
+++ b/admin/package.json
@@ -6,6 +6,7 @@
     "apollo-boost": "^0.1.4",
     "dotenv-safe": "^5.0.1",
     "express": "^4.16.3",
+    "final-form": "^4.4.0",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.8.0",
     "history": "^4.7.2",
@@ -15,6 +16,7 @@
     "react-apollo": "^2.1.2",
     "react-color": "^2.14.0",
     "react-dom": "^16.2.0",
+    "react-final-form": "^3.1.5",
     "react-helmet": "^5.2.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
