--- a/admin/package.json
+++ b/admin/package.json
@@ -3,7 +3,11 @@
   "version": "0.7.1",
   "private": true,
   "dependencies": {
-    "apollo-boost": "^0.1.4",
+    "apollo-cache-inmemory": "^1.1.12",
+    "apollo-client": "^2.2.8",
+    "apollo-link": "^1.2.1",
+    "apollo-link-error": "^1.0.7",
+    "apollo-link-http": "^1.5.3",
     "dotenv-safe": "^5.0.1",
     "express": "^4.16.3",
     "final-form": "^4.4.0",
@@ -14,6 +18,7 @@
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-apollo": "^2.1.2",
+    "react-apollo-network-status": "^1.0.0",
     "react-color": "^2.14.0",
     "react-dom": "^16.2.0",
     "react-final-form": "^3.1.5",
