--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -2,6 +2,8 @@
   "extends": "stylelint-config-standard",
   "rules": {
     "color-hex-case": "upper",
-    "color-hex-length": "long"
+    "color-hex-length": "long",
+    "declaration-colon-newline-after": "always-multi-line",
+    "at-rule-no-unknown": [true, { "ignoreAtRules": ["extend"] }]
   }
 }
