🚧  [ADMIN] add multiple values in one input (array values form)

--- a/admin/src/fontello/config.json
+++ b/admin/src/fontello/config.json
@@ -65,6 +65,18 @@
       "css": "user-add",
       "code": 59398,
       "src": "entypo"
+    },
+    {
+      "uid": "c759418c008e9562944080fee617fc76",
+      "css": "cancel-circled",
+      "code": 59403,
+      "src": "entypo"
+    },
+    {
+      "uid": "70370693ada58ef0a60fa0984fe8d52a",
+      "css": "plus",
+      "code": 59402,
+      "src": "entypo"
     }
   ]
 }
