--- a/admin/package.json
+++ b/admin/package.json
@@ -11,6 +11,7 @@
     "express": "^4.16.3",
     "final-form": "^4.4.0",
     "final-form-arrays": "^1.0.4",
+    "final-form-calculate": "^1.1.0",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.8.0",
     "history": "^4.7.2",
