🚧  [ADMIN] replace ArrayValues by TagValues

--- a/admin/src/fontello/config.json
+++ b/admin/src/fontello/config.json
@@ -79,8 +79,8 @@
       "src": "entypo"
     },
     {
-      "uid": "c709da589c923ba3c2ad48d9fc563e93",
-      "css": "cancel",
+      "uid": "a66cdc7278e6b33b8bd44a141f5e1a8d",
+      "css": "plus-circled",
       "code": 59404,
       "src": "entypo"
     }
