--- a/admin/src/fontello/config.json
+++ b/admin/src/fontello/config.json
@@ -83,6 +83,24 @@
       "css": "plus-circled",
       "code": 59404,
       "src": "entypo"
+    },
+    {
+      "uid": "c709da589c923ba3c2ad48d9fc563e93",
+      "css": "cancel",
+      "code": 59405,
+      "src": "entypo"
+    },
+    {
+      "uid": "14017aae737730faeda4a6fd8fb3a5f0",
+      "css": "check",
+      "code": 59406,
+      "src": "entypo"
+    },
+    {
+      "uid": "7e4164950ffa4990961958b2d6318658",
+      "css": "info-circled",
+      "code": 59407,
+      "src": "entypo"
     }
   ]
 }
