🚧  🐳  update frontend project dockerfile + nginx configuration

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,9 @@
 FROM nginx
 
+# maintainer of this docker file
 LABEL maintainer=matthieu.lassalvy@beta.gouv.fr
 
+# copy project conf to nginx config
 COPY nginx.conf /etc/nginx/nginx.conf
 
 # Install Sources
