--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,7 @@
 version: '3'
 services:
-  assec-web:
-    build: ./nginx/
+  web:
+    build: ./frontend
     ports:
      - "8080:80"
      - "443:443"
-    links:
-      - assec-admin:admin
-  assec-admin:
-    build: ./admin/
-    ports:
-     - "3100"
