--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "assec-frontend",
   "version": "0.7.4",
   "private": true,
+  "homepage": "./",
   "dependencies": {
     "dotenv-safe": "^5.0.1",
     "fast-deep-equal": "^1.1.0",
@@ -32,7 +33,6 @@
     "generate:schema": "node ./.scripts/schema.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "postbuild": "cp ./src/styles.css ./build/",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "sass": "node_modules/.bin/node-sass -w -r src/scss/styles.scss src/styles.css --output-style compressed"
