🚧  🐳  update nodejs engine version compatible with deploy

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "email": "sixertoy.github@gmail.com"
   },
   "engines": {
-    "node": "8.11.0"
+    "node": "^8.11.0"
   },
   "scripts": {
     "dev": "nf start -p 3000",
