🚧  🐳  update prebuild commands for admin and frontend project

--- a/admin/package.json
+++ b/admin/package.json
@@ -37,6 +37,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "prebuild": "node_modules/.bin/node-sass -r src/scss/styles.scss src/styles.css --output-style compressed",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
