🚧  🐳  add docker.prod configuration

--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "bump": "node ./.scripts/yarn-bump",
     "cleanup": "sh ./.scripts/yarn-cleanup",
     "postcleanup": "yarn install",
-    "precompose": "sh ./.scripts/yarn-build",
-    "compose": "docker-compose -p assec up --build"
+    "compose": "docker-compose -p assec up --build",
+    "precompose:prod": "sh ./.scripts/yarn-build",
+    "compose:prod": "docker-compose -f docker-compose.yml -f docker-compose.prod.yml -p assec up --build"
   },
   "workspaces": [
     "admin",
