--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "postcleanup": "yarn install",
     "compose": "docker-compose -p assec up --build",
     "precompose:prod": "sh ./.scripts/yarn-build",
-    "compose:prod": "docker-compose -f docker-compose.yml -f docker-compose.prod.yml -p assec up --build"
+    "compose:prod": "docker-compose -f docker-compose.yml -f docker-compose.prod.yml -p assec up --build",
+    "deploy": "fab -f deploy.py deploy"
   },
   "workspaces": [
     "admin",
