🚧  💅  update admin UI

--- a/admin/src/fontello/config.json
+++ b/admin/src/fontello/config.json
@@ -113,6 +113,12 @@
       "css": "tag",
       "code": 59409,
       "src": "elusive"
+    },
+    {
+      "uid": "74b2f1d1ee541715b3f389f7cdf63d1c",
+      "css": "logout",
+      "code": 59410,
+      "src": "websymbols"
     }
   ]
 }
