--- a/nginx-web/nginx.conf
+++ b/nginx-web/nginx.conf
@@ -24,7 +24,7 @@ http {
 
   server {
     listen 80;
-    server_name assec.loc;
+    server_name assec.beta.gouv;
 
     gzip on;
     gzip_http_version 1.1;
