--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "homepage": "./",
   "dependencies": {
     "dotenv-safe": "^5.0.1",
+    "express": "^4.16.3",
     "fast-deep-equal": "^1.1.0",
     "history": "^4.7.2",
     "leaflet": "^1.3.1",
@@ -12,6 +13,7 @@
     "lodash.map": "^4.6.0",
     "lodash.maxby": "^4.6.0",
     "lodash.without": "^4.4.0",
+    "morgan": "^1.9.0",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
