--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,21 @@
 version: '3'
 services:
   web:
-    build: ./frontend
+    build: ./nginx
+    restart: always
     ports:
-     - "8080:80"
-     - "443:443"
+      - 80:8080
+      - 81:8081
+    depends_on:
+      - admin
+      - frontend
+  admin:
+    build: ./admin
+    restart: always
+    ports:
+      - "3100"
+  frontend:
+    build: ./frontend
+    restart: always
+    ports:
+      - "3000"
