🚧  🐳  add subdomain to nginx for admin app

--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -28,7 +28,8 @@ COPY build/ ./public/
 RUN yarn global add pm2
 RUN yarn install --production
 
-# expose ExpressJS server port to Docker Compose links
+# expose ExpressJS server port to Docker
+# FIXME -> should be loaded from .env file
 EXPOSE 3100
 
 # !!! DO NOT RUN AS `ROOT` !!!
