--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,6 +8,21 @@ events {
 
 http {
 
+  # includes all default file mime types
+  include /etc/nginx/mime.types;
+  # default index pages
+  index index.html index.htm index.php;
+  # default file type
+  default_type application/octet-stream;
+  # force download file instead of open in browser
+  # sendfile on;
+
+  proxy_redirect     off;
+  proxy_set_header   Host $host;
+  proxy_set_header   X-Real-IP $remote_addr;
+  proxy_set_header   X-Forwarded-Host $server_name;
+  proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+
   upstream assec.loc {
     server frontend:3000;
   }
@@ -18,26 +33,17 @@ http {
 
   server {
     listen 8080;
-
+    server_name _;
     location / {
-      proxy_pass         http://assec.loc/;
-      proxy_redirect     off;
-      proxy_set_header   Host $host;
-      proxy_set_header   X-Real-IP $remote_addr;
-      proxy_set_header   X-Forwarded-Host $server_name;
-      proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_pass http://assec.loc/;
     }
   }
 
   server {
-    listen 8081;
+    listen 8080;
+    server_name admin.*;
     location / {
-      proxy_pass         http://admin.assec.loc/;
-      proxy_redirect     off;
-      proxy_set_header   Host $host;
-      proxy_set_header   X-Real-IP $remote_addr;
-      proxy_set_header   X-Forwarded-Host $server_name;
-      proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_pass http://admin.assec.loc/;
     }
   }
 }
