--- a/graph/package.json
+++ b/graph/package.json
@@ -7,7 +7,14 @@
     "babel-preset-env": "^1.6.1",
     "casual": "^1.5.19",
     "dotenv-safe": "^5.0.1",
-    "nodemon": "^1.17.2"
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
+    "nodemon": "^1.17.2",
+    "prettier": "^1.11.1",
+    "prettier-eslint": "^8.8.1"
   },
   "dependencies": {
     "apollo-server-express": "^1.3.4",
