🚧  🐳  update all docker files

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -17,7 +17,7 @@ LABEL maintainer=matthieu.lassalvy@beta.gouv.fr
 ENV NPM_CONFIG_PREFIX=/home/node/.npm-global
 ENV PATH=$PATH:/home/node/.npm-global/bin
 
-WORKDIR /home/node/app
+WORKDIR /home/node/www
 COPY server.js .
 COPY package.json .
 COPY build/ ./public/
