--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,18 +8,23 @@ services:
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
   graph:
-    build: ./admin
+    build: ./graph
     environment:
       - VIRTUAL_HOST=graph.iziges.fr
+      - ASSEC_MONGO_DOMAIN=mongo.iziges.fr
+    depends_on:
+      - mongo
   admin:
     build: ./admin
     environment:
       - VIRTUAL_HOST=backend.iziges.fr
+      - ASSEC_API_DOMAIN=graph.iziges.fr
     depends_on:
       - graph
   frontend:
     build: ./frontend
     environment:
       - VIRTUAL_HOST=assec.iziges.fr
+      - ASSEC_API_DOMAIN=graph.iziges.fr
     depends_on:
       - graph
