🚧  rename all server.js file to serve.js

--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -20,7 +20,7 @@ ENV PATH=$PATH:/home/node/.npm-global/bin
 
 # Install Sources
 WORKDIR /home/node/www
-COPY server.js .
+COPY serve.js .
 COPY package.json .
 COPY build/ ./public/
 
@@ -34,4 +34,4 @@ EXPOSE 3100
 
 # !!! DO NOT RUN AS `ROOT` !!!
 USER node
-CMD ["pm2-runtime", "server.js"]
+CMD ["pm2-runtime", "serve.js"]
