🚧  🐳  update docker composer file to be used in dev only

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,21 +10,21 @@ services:
   graph:
     build: ./graph
     environment:
-      - VIRTUAL_HOST=graph.iziges.fr
-      - ASSEC_MONGO_DOMAIN=mongo.iziges.fr
+      - VIRTUAL_HOST=graph.docker.loc
+      - ASSEC_MONGO_DOMAIN=mongo.docker.loc
     depends_on:
       - mongo
   admin:
     build: ./admin
     environment:
-      - VIRTUAL_HOST=backend.iziges.fr
-      - ASSEC_API_DOMAIN=graph.iziges.fr
+      - VIRTUAL_HOST=backend.docker.loc
+      - ASSEC_API_DOMAIN=graph.docker.loc
     depends_on:
       - graph
   frontend:
     build: ./frontend
     environment:
-      - VIRTUAL_HOST=assec.iziges.fr
-      - ASSEC_API_DOMAIN=graph.iziges.fr
+      - VIRTUAL_HOST=assec.docker.loc
+      - ASSEC_API_DOMAIN=graph.docker.loc
     depends_on:
       - graph
