--- a/graph/package.json
+++ b/graph/package.json
@@ -3,10 +3,7 @@
   "version": "0.7.5",
   "private": true,
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
     "casual": "^1.5.19",
-    "dotenv-safe": "^5.0.1",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.9.0",
@@ -18,11 +15,11 @@
   },
   "dependencies": {
     "apollo-server-express": "^1.3.4",
+    "babel-register": "^6.26.0",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "compression": "^1.7.2",
     "cors": "^2.8.4",
-    "dotenv-safe": "^5.0.1",
     "express": "^4.16.3",
     "graphql": "^0.13.2",
     "graphql-tools": "^2.23.1",
@@ -30,16 +27,10 @@
     "lodash.times": "^4.3.2",
     "mongoose": "^5.0.12",
     "node-fetch": "^2.1.2",
-    "passport": "^0.4.0",
     "sequelize": "^4.37.5",
     "sqlite": "^2.9.1"
   },
-  "babel": {
-    "presets": [
-      "env"
-    ]
-  },
   "scripts": {
-    "dev": "nodemon ./serve.js --exec babel-node"
+    "dev": "nodemon ./entry-point.js"
   }
 }
