--- a/graph/package.json
+++ b/graph/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "apollo-server-express": "^1.3.4",
+    "babel-preset-env": "^1.6.1",
     "babel-register": "^6.26.0",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
