🚧  🐳  mise a jour de l'image docker pour l'application admin
- mise a jour de la documentation
- supression des commandes 'yarn build' et 'yarn eject', unused
- integration de la librairie utils

--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -1,11 +1,3 @@
-FROM node:8.11.1-alpine
-
-# File Author / Maintainer
-LABEL maintainer=matthieu.lassalvy@beta.gouv.fr
-
-#
-# NodeJS Docker Webapp - Official Doc
-# @see https://nodejs.org/en/docs/guides/nodejs-docker-webapp/
 #
 # NodeJS / Docker - Best Practices
 # @see https://github.com/nodejs/docker-node/blob/master/docs/BestPractices.md
@@ -13,6 +5,10 @@ LABEL maintainer=matthieu.lassalvy@beta.gouv.fr
 # PM2 Docker Integration
 # @see http://pm2.keymetrics.io/docs/usage/docker-pm2-nodejs/
 #
+FROM node:8.11.1-alpine
+
+# File Author / Maintainer
+LABEL maintainer=matthieu.lassalvy@beta.gouv.fr
 
 # NPM Env Configuration
 ENV NPM_CONFIG_PREFIX=/home/node/.npm-global
@@ -23,14 +19,11 @@ WORKDIR /home/node/www
 COPY serve.js .
 COPY package.json .
 COPY build/ ./public/
+COPY server/ ./server/
 
 # NPM Install
 RUN yarn global add pm2
 RUN yarn install --production
-
-# expose ExpressJS server port to Docker
-# FIXME -> should be loaded from .env file
-EXPOSE 3100
 
 # !!! DO NOT RUN AS `ROOT` !!!
 USER node
