--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,11 +1,3 @@
-FROM node:8.11.1-alpine
-
-# maintainer of this docker file
-LABEL maintainer=matthieu.lassalvy@beta.gouv.fr
-
-#
-# NodeJS Docker Webapp - Official Doc
-# @see https://nodejs.org/en/docs/guides/nodejs-docker-webapp/
 #
 # NodeJS / Docker - Best Practices
 # @see https://github.com/nodejs/docker-node/blob/master/docs/BestPractices.md
@@ -13,7 +5,13 @@ LABEL maintainer=matthieu.lassalvy@beta.gouv.fr
 # PM2 Docker Integration
 # @see http://pm2.keymetrics.io/docs/usage/docker-pm2-nodejs/
 #
+FROM node:8.11.1-alpine
 
+# maintainer of this docker file
+LABEL maintainer=matthieu.lassalvy@beta.gouv.fr
+
+# expose ExpressJS server port to Docker
+# FIXME -> should be loaded from .env file
 ENV NPM_CONFIG_PREFIX=/home/node/.npm-global
 ENV PATH=$PATH:/home/node/.npm-global/bin
 
@@ -21,13 +19,10 @@ WORKDIR /home/node/www
 COPY serve.js .
 COPY package.json .
 COPY build/ ./public/
+COPY server/ ./server/
 
 RUN yarn global add pm2
 RUN yarn install --production
-
-# expose ExpressJS server port to Docker
-# FIXME -> should be loaded from .env file
-EXPOSE 3000
 
 # !!! DO NOT RUN AS `ROOT` !!!
 USER node
