🚧  🐳  mise a jour de l'image docker de l'application graph
- integration de la librairie utils
- ajout d'un point d'entree babel pour compile les fichiers ES6

--- a/graph/Dockerfile
+++ b/graph/Dockerfile
@@ -20,17 +20,13 @@ ENV PATH=$PATH:/home/node/.npm-global/bin
 WORKDIR /home/node/server
 COPY serve.js .
 COPY .babelrc .
-COPY entry-point.js .
-COPY package.json .
 COPY app/ ./app/
+COPY package.json .
+COPY entry-point.es6 .
 
 RUN yarn global add pm2
 RUN yarn install --production
 
-# expose ExpressJS server port to Docker
-# FIXME -> should be loaded from .env file
-EXPOSE 3200
-
 # !!! DO NOT RUN AS `ROOT` !!!
 USER node
-CMD ["pm2-runtime", "entry-point.js"]
+CMD ["pm2-runtime", "entry-point.es6"]
