🚧  🐳  ajout des configurations d'image pour le staging local et le deploy en production
- le fichier docker-compose.prod.yml surcharge le fichier docker-compose.yml
- modification du scrip de build pour prendre en compte les fichiers .env pour production et staging, ce fichier permet de builder les apps react en mode statique/production
- ajout d'un peu de doc dans le fichier Procfile pour Foreman

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,12 +1,26 @@
 version: '2'
 
 services:
+  mongo:
+    environment:
+      - NODE_ENV=production
+      # - MONGO_INITDB_ROOT_USERNAME="admin"
+      # - MONGO_INITDB_ROOT_PASSWORD="password"
   graph:
     environment:
+      - NODE_ENV=production
       - VIRTUAL_HOST=graph.iziges.fr
   admin:
+    # les variables pour le build s'ajoute dans les fichier
+    # - .env.build.staging
+    # - .env.build.production
     environment:
+      - NODE_ENV=production
       - VIRTUAL_HOST=admin.iziges.fr
   frontend:
+    # les variables pour le build s'ajoute dans les fichier
+    # - .env.build.staging
+    # - .env.build.production
     environment:
+      - NODE_ENV=production
       - VIRTUAL_HOST=assec.iziges.fr
