--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,15 +7,49 @@ services:
       - "80:80"
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
+  mongo:
+    build: ./mongo
+    expose:
+      - 27017
+    volumes:
+      - /mongodb/db:/mongodb/db
+    environment:
+      - NODE_ENV=development
+      - MONGO_INITDB_DATABASE=assec
   graph:
     build: ./graph
+    expose:
+      - 3200
+    depends_on:
+      - mongo
     environment:
+      - PORT=3200
+      - NODE_ENV=development
+      - MONGO_DB_PORT=27017
+      - MONGO_DB_NAME=assec
+      - MONGO_DB_DOMAIN=mongo
       - VIRTUAL_HOST=graph.docker.loc
   admin:
+    # les variables pour le build s'ajoute dans les fichier
+    # - .env.staging
     build: ./admin
+    expose:
+      - 3100
+    depends_on:
+      - graph
     environment:
+      - PORT=3100
+      - NODE_ENV=development
       - VIRTUAL_HOST=admin.docker.loc
   frontend:
+    # les variables pour le build s'ajoute dans les fichier
+    # - .env.staging
     build: ./frontend
+    expose:
+      - 3000
+    depends_on:
+      - graph
     environment:
-      - VIRTUAL_HOST=docker.loc
+      - PORT=3000
+      - NODE_ENV=development
+      - VIRTUAL_HOST=assec.docker.loc
