🚧  🐳  update deploy script with stop containers and clean exited

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "author": {
     "name": "Matthieu Lassalvy",
-    "email": "sixertoy.github@gmail.com"
+    "email": "matthieu.lassalvy@beta.gouv.fr"
   },
   "engines": {
     "node": "^8.11.0"
