--- a/graph/package.json
+++ b/graph/package.json
@@ -33,6 +33,6 @@
     "sqlite": "^2.9.1"
   },
   "scripts": {
-    "dev": "nodemon ./entry-point.js"
+    "dev": "nodemon ./entry-point.es6"
   }
 }
