🚧  🐳  update mongodb configuration

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,6 +2,8 @@ version: '2'
 
 services:
   mongo:
+    volumes:
+      - /mongodb/db:/data/db
     environment:
       - NODE_ENV=production
       # - MONGO_INITDB_ROOT_USERNAME="admin"
