🐳  ⚙️  update deploy script, ajout d'une tache de dump de la BDD mongo

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,8 +2,10 @@ version: '2'
 
 services:
   mongo:
+    container_name: assec_mongodb_prod_container
     volumes:
       - /home/deploy/mongo/db:/data/db
+      - /home/deploy/mongo/dumps:/backups/dump
     environment:
       - NODE_ENV=production
       # - MONGO_INITDB_ROOT_USERNAME="admin"
