--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "postcleanup": "yarn install",
     "build": "sh ./.scripts/yarn-build",
     "compose": "docker-compose -f docker-compose.yml -p assec up --build",
-    "dump": "fab -f deploy.py dump",
-    "deploy": "fab -f deploy.py deploy"
+    "dump": "fab dump",
+    "deploy": "fab deploy"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
