🐞  🐳  add beta.gouv.fr as subdomain pour le frontend et l'admin

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -19,10 +19,10 @@ services:
     # - .env.build.production
     environment:
       - NODE_ENV=production
-      - VIRTUAL_HOST=admin.iziges.fr
+      - VIRTUAL_HOST=admin.iziges.fr,admin.assec.beta.gouv.fr
   frontend:
     # les variables pour le build s'ajoute dans les fichier
     # - .env.build.production
     environment:
       - NODE_ENV=production
-      - VIRTUAL_HOST=assec.iziges.fr
+      - VIRTUAL_HOST=assec.iziges.fr,assec.beta.gouv.fr
