--- a/graph/package.json
+++ b/graph/package.json
@@ -9,7 +9,6 @@
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
-    "nodemon": "^1.17.2",
     "prettier": "^1.11.1",
     "prettier-eslint": "^8.8.1"
   },
@@ -33,6 +32,6 @@
     "sqlite": "^2.9.1"
   },
   "scripts": {
-    "dev": "nodemon ./entry-point.es6"
+    "dev": "node ./entry-point.es6"
   }
 }
