🐳  ajout du nom de domaine aassec.beta.gouv.fr pour l'administration

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -19,7 +19,7 @@ services:
     # - .env.build.production
     environment:
       - NODE_ENV=production
-      - VIRTUAL_HOST=admin.iziges.fr,admin.assec.beta.gouv.fr
+      - VIRTUAL_HOST=admin.iziges.fr,aassec.beta.gouv.fr
   frontend:
     # les variables pour le build s'ajoute dans les fichier
     # - .env.build.production
