--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -4,6 +4,6 @@
     "color-hex-case": "upper",
     "color-hex-length": "long",
     "declaration-colon-newline-after": "always-multi-line",
-    "at-rule-no-unknown": [true, { "ignoreAtRules": ["extend"] }]
+    "at-rule-no-unknown": [true, { "ignoreAtRules": ["extend", "if", "else", "elseif", "each"] }]
   }
 }
